--- a/app/views/checkout/confirm.html.erb
+++ b/app/views/checkout/confirm.html.erb
@@ -8,7 +8,7 @@
           <div class = 'col-xs-10'>
             <div class = 'row'>
               <div class = 'col-xs-12'>
-                <span><h4>Shipping address:</h4> <%= @shipping_address %></span>
+                <span id='shipping-address'><h4>Shipping address:</h4> <%= @shipping_address %></span>
               </div>
             </div>
 
@@ -31,7 +31,7 @@
     </div>
   </div>
   <div class = 'col-sm-3 shopping-cart-summary checkout text-center' data-spy="affix" data-offset-top="60" data-offset-bottom="200">
-    <h4> Subtotal (<%= pluralize(@cart.products.count, 'item') %>): $<%= @cart.subtotal %></h4>
+    <%= render 'shopping_carts/cart_subtotal' %>
     <%= form_for Order.new do |f|%>
       <%= f.hidden_field :shopping_cart_id, value: @cart.id %>
       <%= f.hidden_field :user_id, value: @user.id%>
