--- a/app/views/shopping_carts/show.html.erb
+++ b/app/views/shopping_carts/show.html.erb
@@ -1,8 +1,8 @@
 <hr class = 'nav-padding'/>
-<% if @cart.products.empty? %>
+<% if @cart.empty? %>
   <%= render 'empty'%>
 <% else %>
-  <div class = 'container-fluid'>
+  <div class = 'container-fluid shopping-cart'>
     <div class = 'row-fluid'>
       <div class = 'col-sm-10 product-summary-container'>
         <%= render 'products_summary' %>
