--- a/app/views/base_models/pictures/_edit.html.erb
+++ b/app/views/base_models/pictures/_edit.html.erb
@@ -1,7 +1,7 @@
 <% @pictures.each_with_index do |picture, index| %>
-  <% active = index == 0 ? 'active ' : "" %>
+  <% active = index == 0 ? 'active' : '' %>
   <div class = 'edit_boat'>
-  <%= image_tag picture, :class => active + 'thumbnail gallery-thumbnail'%>
+    <%= image_tag picture, class: "#{active} thumbnail gallery-thumbnail"%>
   <%= link_to base_model_pictures_path(@base_model, filename: picture), method: :delete, remote: true, class: 'delete-picture' do %>
     <%= button_tag type: 'submit', class: 'delete-picture' do %>
       <i class = 'fa fa-times-circle '></i>
