--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
     <%= render 'layouts/messages' %>
     <%= render 'layouts/nav' %>
     <%= yield %>
+    <%= javascript_pack_tag 'hello_react' %>
     <%= render 'layouts/footer' %>
   </body>
 </html>
